0.2.7 2025-09-09
    - Only sync parts having notes.

0.2.6 2025-09-09
    - Handle the cymbals.

0.2.5 2025-09-09
    - Handle the toms.

0.2.4 2025-09-09
    - Simplify rest().

0.2.3 2025-09-09
    - Handle the hihat states in rest().

0.2.2 2025-09-09
    - Make rest() handle a list of patches.

0.2.1 2025-09-09
    - Actually document the usage of the hi-hats.

0.2.0 2025-09-09
    - Special-case the 3 high-hat states so they play on the same part.

0.1.31 2025-09-09
    - Add missing tests.

0.1.30 2025-09-09
    - Simplify test.

0.1.29 2025-09-09
    - Remove more cruft!

0.1.28 2025-09-09
    - Remove cruft.

0.1.27 2025-09-09
    - Fix grace-note volume.

0.1.26 2025-09-09
    - Clean-up code a bit.

0.1.25 2025-09-09
    - Make counter per-part and add tests.
    - Remove cruft.

0.1.24 2025-09-09
    - Improve docs ever-so-slightly.

0.1.23 2025-09-09
    - Fix copy-pasta.

0.1.22 2025-09-09
    - Improve docs.

0.1.21 2025-09-09
    - Simplify pattern().

0.1.20 2025-09-09
    - Fix sync'ing.

0.1.19 2025-09-09
    - Fix instruments.

0.1.18 2025-09-09
    - Remove cruft.

0.1.17 2025-09-09
    - Fix docs again!

0.1.16 2025-09-09
    - Fix docs.

0.1.15 2025-09-09
    - Remove more cruft.

0.1.14 2025-09-09
    - Clean-up docs.
    - Remove cruft that snuck-in.

0.1.13 2025-09-09
    - Refactor the way music21 instruments are handled.

0.1.12 2025-09-09
    - Make instrument_map() return the whole kit, if requested.
    - Add test.

0.1.11 2025-09-09
    - Change how instrumentation works.

0.1.10 2025-09-08
    - Fix pattern() and count_in().

0.1.9 2025-09-08
    - Fix count_in().

0.1.8 2025-09-08
    - Clean-up code...

0.1.7 2025-09-08
    - Simplify API!
    - Add new instrument handling.

0.1.6 2025-09-08
    - Fix BPM handling.

0.1.5 2025-09-08
    - Fix example.

0.1.4 2025-09-08
    - Fix duration= parameter.

0.1.3 2025-09-08
    - Simplify handling of instrument patches.

0.1.2 2025-09-08
    - Fix the docs.

0.1.1 2025-09-08