@@ -133,8 +133,28 @@ class TestDrummer(unittest.TestCase):
         d.note('ridebell', duration=1/2)
         self.assertEqual(len(d.kit['cymbals']['part'].getElementsByClass('Note')), 7)
         self.assertEqual(d.kit['cymbals']['counter'], 3.5)
-        # d.sync_parts()
-        # d.score.show('midi')
+
+    def test_percussion(self):
+        d = Drummer()
+        d.note('bongo1')
+        d.note('bongo2')
+        d.note('cabasa')
+        d.note('clap')
+        d.note('claves')
+        d.note('conga1')
+        d.note('conga2')
+        d.note('conga3')
+        d.note('cowbell')
+        d.note('shaker')
+        d.note('tambourine')
+        d.note('timbale1')
+        d.note('timbale2')
+        d.note('triangle1')
+        d.note('triangle2')
+        d.note('woodblock1')
+        d.note('woodblock2')
+        self.assertEqual(len(d.kit['percussion']['part'].getElementsByClass('Note')), 17)
+        self.assertEqual(d.kit['percussion']['counter'], 17.0)
 
 if __name__ == '__main__':
     unittest.main()
