@@ -1,5 +1,6 @@
 0.2.7 2025-09-09
     - Only sync parts having notes.
+    - Handle percussion instruments.
 
 0.2.6 2025-09-09
     - Handle the cymbals.
